tests/checker/diagnostics/0885_gadt_packed_branch_result_mismatch_03.ml.infer.expected
File "0885_gadt_packed_branch_result_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0885_gadt_packed_branch_result_mismatch_03 is not a valid module name.

File "0885_gadt_packed_branch_result_mismatch_03.ml", line 9, characters 33-34:
9 |   | Pack_gamma (Bool_gamma b) -> b
                                     ^
Error: The value b has type bool but an expression was expected of type int
